fix navigation menu on mobile screen

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -565,6 +565,7 @@ section
             &-active
                 opacity: 1
                 transform: scaleY(1) scaleX(1)
+                z-index: 10
         &-menu  
             display: block
         &-bar
